--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-fastapi
-uvicorn
-numpy
-pillow
-tensorflow
-gdown
-scikit-image
-python-multipart
+# fastapi
+# uvicorn
+# numpy
+# pillow
+# tensorflow
+# gdown
+# scikit-image
+# python-multipart
 
 # fastapi
 # uvicorn[standard]
@@ -14,3 +14,14 @@ python-multipart
 # gdown
 # scikit-image
 # python-multipart
+fastapi==0.111.0
+uvicorn==0.29.0
+tensorflow==2.14.0
+pydantic==2.7.1
+numpy>=1.24
+pillow
+scikit-image
+opencv-python
+gdown
+python-multipart
+
