--- a/requirements.txt
+++ b/requirements.txt
@@ -7,11 +7,11 @@
 # gdown
 # scikit-image
 # python-multipart
-fastapi==0.111.0
-uvicorn==0.29.0
-tensorflow==2.14.0
-numpy==1.24.3
-pydantic==2.7.1
+fastapi
+uvicorn
+tensorflow
+numpy
+pydantic
 pillow
 opencv-python
 scikit-image
